# cryonote-old

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  Makefile  README.md  ReleaseNotes.txt  build-v110.bat
contrib/: .gitignore
contrib/epee/: LICENSE.txt  README.md
include/: INode.h  IWallet.h
src/: CMakeLists.txt  cryptonote_config.h  version.cmake  version.h.in
src/common/: base58.cpp  base58.hpp  boost_serialization_helper.h  command_line.cpp  command_line.hpp  int-util.h  pod-class.h  unordered_containers_boost_serialization.h  util.cpp  util.h  util.hpp  varint.h
src/connectivity_tool/: conn_tool.cpp
src/crypto/: blake256.c  blake256.h  chacha8.h  crypto-ops-data.c  crypto-ops.c  crypto-ops.h  crypto.cpp  crypto.h  generic-ops.h  groestl.c  hash-extra-blake.c  hash-extra-groestl.c  hash-extra-jh.c  hash-extra-skein.c  hash-ops.h  hash.c  hash.h  initializer.h  keccak.c  oaes_lib.c  random.c  random.h  slow-hash.c  tree-hash.c
src/cryptonote_core/: account.cpp  account.hpp  account_boost_serialization.h  blockchain_storage.cpp  blockchain_storage.h  blockchain_storage.hpp  blockchain_storage_boost_serialization.h  checkpoints.cpp  checkpoints.h  checkpoints.hpp  checkpoints_create.h  connection_context.h  cryptonote_basic.h  cryptonote_basic_impl.cpp  cryptonote_basic_impl.h  cryptonote_basic_impl.hpp  cryptonote_boost_serialization.h  cryptonote_core.cpp  cryptonote_core.h  cryptonote_core.hpp  cryptonote_format_utils.cpp  cryptonote_format_utils.h  cryptonote_format_utils.hpp  cryptonote_stat_info.h  difficulty.cpp  difficulty.h  difficulty.hpp  miner.cpp  miner.h  miner.hpp  tx_extra.h  tx_pool.cpp  tx_pool.h  tx_pool.hpp  verification_context.h
src/cryptonote_protocol/: blobdatatype.h  cryptonote_protocol_defs.h  cryptonote_protocol_handler.h  cryptonote_protocol_handler.inl  cryptonote_protocol_handler_common.h
src/daemon/: daemon.cpp  daemon_commands_handler.h
src/miner/: simpleminer.cpp  simpleminer.h  simpleminer.hpp  simpleminer_protocol_defs.h  target_helper.h
src/p2p/: net_node.h  net_node.inl  net_node_common.h  net_peerlist.h  net_peerlist_boost_serialization.h  p2p_networks.h  p2p_protocol_defs.h  stdafx.h
src/platform/mingw/: alloca.h
src/platform/msc/: alloca.h  inline_c.h  stdbool.h
src/platform/msc/sys/: param.h
src/rpc/: core_rpc_server.cpp  core_rpc_server.h  core_rpc_server.hpp  core_rpc_server_commands_defs.h  core_rpc_server_error_codes.h
src/serialization/: binary_archive.h  binary_utils.h  crypto.h  debug_archive.h  json_archive.h  json_utils.h  serialization.h  string.h  variant.h  vector.h
src/simplewallet/: password_container.cpp  password_container.h  password_container.hpp  simplewallet.cpp  simplewallet.h  simplewallet.hpp
src/wallet/: wallet.cpp  wallet.h  wallet.hpp  wallet_errors.h  wallet_rpc_server.cpp  wallet_rpc_server.h  wallet_rpc_server.hpp  wallet_rpc_server_commans_defs.h  wallet_rpc_server_error_codes.h
tests/: CMakeLists.txt  hash-target.cpp  io.h
tests/core_proxy/: core_proxy.cpp  core_proxy.h
tests/core_tests/: block_reward.cpp  block_reward.h  block_validation.cpp  block_validation.h  chaingen.h  (+19 more)
utils/: test-static-assert.c
(+134 files in other folders)
